Add some help text on the preferences page

--- a/preferences.html
+++ b/preferences.html
@@ -5,6 +5,7 @@
   </head>
   <body>
     <form>
+      <p>A value of <strong><code>1</code></strong> means 100%. It can be between <strong><code>0.3</code></strong> and <strong><code>3</code></strong>.<p>
       <label>Default Zoom <input id="default-zoom" type="number" step="0.01" min="0.3" max="3"></label>
       <button type="submit">Save</button>
     </form>
