Change units of the Default Zoom preference

--- a/preferences.html
+++ b/preferences.html
@@ -5,8 +5,8 @@
   </head>
   <body>
     <form>
-      <p>A value of <strong><code>1</code></strong> means 100%. It can be between <strong><code>0.3</code></strong> and <strong><code>3</code></strong>.<p>
-      <label>Default Zoom <input id="default-zoom" type="number" step="0.01" min="0.3" max="3"></label>
+      <p>This value can be between <strong><code>30</code></strong> and <strong><code>300</code></strong>.<p>
+      <label>Default Zoom Percentage: <input id="default-zoom" type="number" step="1" min="30" max="300"></label>
       <button type="submit">Save</button>
     </form>
     <script src="preferences.js"></script>
